<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!-- item menu Home -->
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/consulta_chamados"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/consulta_chamados" />
        <item
            android:id="@+id/oficinas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/oficinas" />
        <item
            android:id="@+id/meus_dados"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/meus_dados" />

        <item
            android:id="@+id/config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/config" />

        <item
            android:id="@+id/ajuda"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ajuda" />

        <item
            android:id="@+id/sobre"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sobre" />

        <item
            android:id="@+id/termos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/termos" />
    </group>

</menu>
