<?xml version="1.0" encoding="utf-8"?>

<!-- Este layout tem como objetivo exibir a tela de login, a activity LoginAcitity pertence a esse layout -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Base.AlertDialog.AppCompat.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:baselineAligned="false"
    android:clickable="false"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="959dp"
        android:layout_height="150dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="0.47"
        android:src="@drawable/ic_logo_user" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/tCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!-- campo de teto para digitar a senha -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/tSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!-- label para caso o usuario tenha esquecido a senha -->
    <TextView
        android:id="@+id/btSenha"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="onClickLogin"
        android:text="@string/esqueci_senha"
        android:textColor="@color/text_icons" />

    <!-- botao para logar -->
    <Button
        android:id="@+id/btLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:background="@color/accent_color"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textColor="@color/text_icons" />

</LinearLayout>